# ChaosPINN

./: .gitignore  README.md  app.py  ks_model_20250330_040538.pt  ks_model_20250330_072330.pt  ks_physics_enhanced_model.pt  ks_supervised_model.pt  main.py  model_fit.py  pyproject.toml
PINN-Model/: ks_physics_enhanced_model.pt  load_and_evaluate.py  model.py  paste.py
Purandar_xde_PINN/: 1DKSPINN.py  UIUX.py
baseline/: baseline.py  deepxde_baseline.py  visualize_ks.py
baseline/results/: ks_model-15000.pt
chaospinn/: package-lock.json  package.json
chaospinn/app/: globals.css  page.tsx
chaospinn/components/: ControlPanel.tsx  ThreeScene.tsx
chaospinn/lib/: api.ts
ks_results/: ks_model.pt  ks_model_best.pt  ks_model_epoch_1000.pt  ks_model_epoch_2000.pt
visualization/: initial_visualization.py
visualization/data/temp_oddperiodic/: L000p1.txt  L000p2.txt  L000p3.txt  L000p4.txt  L000p5.txt  L000p6.txt  L000p7.txt  L000p8.txt  L000p9.txt  L001p0.txt  L001p1.txt  L001p2.txt  L001p3.txt  L001p4.txt  L001p5.txt  L001p6.txt  L001p7.txt  L001p8.txt  L001p9.txt  L002p0.txt  L002p1.txt  L002p2.txt  L002p3.txt  L002p4.txt  L002p5.txt  L002p6.txt  L002p7.txt  L002p8.txt  L002p9.txt  L003p0.txt  L003p1.txt  L003p2.txt  L003p3.txt  L003p4.txt  L003p5.txt  L003p6.txt  L003p7.txt  L003p8.txt  L003p9.txt  L004p0.txt  (+960 more)
visualization/data/temp_periodic/: L000p1.txt  L000p2.txt  L000p3.txt  L000p4.txt  L000p5.txt  L000p6.txt  L000p7.txt  L000p8.txt  L000p9.txt  L001p0.txt  L001p1.txt  L001p2.txt  L001p3.txt  L001p4.txt  L001p5.txt  L001p6.txt  L001p7.txt  L001p8.txt  (+982 more)
